--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
 <resources>
     <string name="app_name">IdealApp</string>
+    <string name="add_task">Add Task</string>
+    <string name="title">Title</string>
+    <string name="description">Description</string>
+    <string name="add">Add</string>
+    <string name="tasks">Tasks</string>
+    <string name="delete_all">Delete all</string>
+    <string name="no_task_yet">No task yet</string>
+    <string name="delete">Delete</string>
+    <string name="are_you_sure_to_delete_q">Are you sure to delete?</string>
+    <string name="yes">Yes</string>
+    <string name="cancel">Cancel</string>
+    <string name="splash">Splash</string>
 </resources>
