--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="yes">Yes</string>
     <string name="cancel">Cancel</string>
     <string name="splash">Splash</string>
+    <string name="edit_task">Edit Task</string>
+    <string name="update">Update</string>
 </resources>
